# 27th-conference-MLOPS

./: .gitignore  .gitmodules  README.md  appspec.yml
.github/workflows/: deploy-lambda.yml  deploy-to-lightsail.yml  deploy.yml
airflow/dags/test/deployment_verification/: dag.py
airflow/utils/: dag_utils.py
bitcoin-ingestor/: PROJECT.md  README.md  pyproject.toml  requirements.txt
bitcoin-ingestor/configs/: collector.yaml
bitcoin-ingestor/docs/: ARCHITECTURE.md  MULTI_SYMBOL_DEPLOYMENT.md  RUNBOOK.md  S3_LAYOUT.md  TERRAFORM_DEPLOYMENT.md
bitcoin-ingestor/infra/terraform/: deploy-symbol.sh  ec2.tf  list-deployments.sh  main.tf  outputs.tf  providers.tf  s3.tf  terraform.tfvars.example  user_data.sh  variables.tf  vpc.tf
bitcoin-ingestor/schemas/: manifest.json  ohlcv1s.parquet.schema  trade.json
bitcoin-ingestor/src/collector/: __init__.py  collector_simple.py  manifest.py  rotator.py  s3_uploader.py  utils.py  ws_client.py
bitcoin-ingestor/systemd/: market-collector.service
bitcoin-ingestor/tests/: __init__.py  conftest.py
bitcoin-ingestor/tests/integration/: test_s3_upload.py
bitcoin-ingestor/tests/unit/: test_manifest.py  test_rotator.py  test_utils.py
infra/ingestor/: README.md
infra/ingestor/app/: collector.py  requirements.txt
infra/ingestor/codedeploy/: collector.service
infra/ingestor/codedeploy/scripts/: install.sh  start.sh  stop.sh
infra/ingestor/terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars.example
scripts/: backend_initalize.sh  local_prefill_news_data.sh  local_s3_download.sh  local_upsert.sh
(+1 files in other folders)
